# ghostbridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FFI_LAYER_ISSUES.md  GCC_TODO.md  GCRYPT_INTEGRATION.md  JUN-29.md  README.md  TODO.md  build.zig  build.zig.zon  ghostbridge_ffi.zig
benches/: bridge_performance.rs
docs/: README.md  api.md  architecture.md  l2-settlement.md  security.md
examples/: quick_start.sh
ghostwire/zquic/ffi/: zcrypto_ffi.zig
proto/: common.proto  cross_chain.proto  eth_bridge.proto  ghostchain.proto  ghostdns.proto  stellar_bridge.proto
rust-client/: Cargo.toml  INT_BRIDGE.md  build.rs
rust-client/examples/: quic_client_example.rs
rust-client/src/: client.rs  connection_pool.rs  crypto.rs  lib.rs  quic_client_wrapper.rs  quic_transport.rs
src/: error.rs  ffi.rs  lib.rs  main.rs  main.zig  quic_multiplexer.zig  types.rs  zns_cache.zig  zns_metrics.zig  zns_resolver.zig  zns_service.zig  zns_subscription.zig  zns_types.zig  zns_validator.zig
src/bridge/: config.rs  mod.rs
src/economy/: distribution.rs  economics.rs  fee_calculator.rs  mod.rs  token_manager.rs
src/resolvers/: ens.zig  ud.zig
src/security/: audit.rs  crypto.rs  guardian.rs  identity.rs  mod.rs  policy.rs
src/services/: cns.rs  ghostd.rs  gid.rs  gledger.rs  gsig.rs  mod.rs  walletd.rs
src/settlement/: batch_processor.rs  finality.rs  mod.rs  optimistic.rs  state_manager.rs  zk_proofs.rs
src/transport/: client.rs  dns.rs  mesh.rs  mod.rs  pool.rs  server.rs
zig-server/: build.zig  build.zig.zon
zig-server/certs/: server.crt  server.key
zig-server/src/: cross_chain_service.zig  eth_bridge.zig  grpc.zig  http2.zig  identity_service.zig  main.zig  protobuf.zig  quic_multiplexer.zig  realid_stub.zig  stellar_bridge.zig  tokioz_stub.zig  wallet_service.zig
