[package]
name = "ghostbridge"
version = "0.1.0"
edition = "2021"
description = "High-performance cross-chain bridge infrastructure for the GhostChain ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghostkellz/ghostbridge"
authors = ["GhostChain Team"]

[lib]
name = "ghostbridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core GhostChain ecosystem dependencies
etherlink = { git = "https://github.com/ghostkellz/etherlink" }
gquic = { git = "https://github.com/ghostkellz/gquic" }
gcrypt = { git = "https://github.com/ghostkellz/gcrypt" }

# Async runtime and core utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Networking and transport
tonic = { version = "0.11", features = ["tls", "gzip", "compression"] }
tonic-health = "0.11"
tonic-reflection = "0.11"
tonic-web = "0.11"
prost = "0.12"
prost-types = "0.12"
tower = { version = "0.4", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
h2 = "0.4"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = { version = "1.0", features = ["derive"] }

# Cryptography and security
ring = "0.17"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }
sha2 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures = "0.2"

# Metrics and monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# Memory management and performance
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Cross-chain support
alloy = { version = "0.1", features = ["full"] }  # Ethereum support
bitcoin = { version = "0.31", features = ["serde"] }  # Bitcoin support

# Database and persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "cluster"] }

# Configuration and environment
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
toml = "0.8"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[features]
default = ["full"]
full = ["ffi", "metrics", "tls"]
ffi = []
metrics = []
tls = ["tonic/tls"]
testing = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[[bench]]
name = "bridge_performance"
harness = false
required-features = ["testing"]
