[package]
name = "ghostbridge-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "compression"] }
prost = "0.13"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.7"
tower = "0.5"
hyper = { version = "1.4", features = ["http2", "client"] }
http = "1.1"
quinn = "0.11" # For QUIC support
rustls = "0.23"
ring = "0.17"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "ghostbridge-example"
path = "src/bin/example.rs"