[package]
name = "ghostbridge-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.7"
tower = "0.5"
hyper = { version = "1.4", features = ["http2", "client"] }
http = "1.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pure Rust implementations from ghostkellz - v0.4.0 with full features
gcrypt = { git = "https://github.com/ghostkellz/gcrypt.git", features = ["std", "rand_core"] }
# Use quinn instead of gquic for stable QUIC implementation
quinn = "0.10"
rustls = "0.21"
tokio-rustls = "0.24"

# Keep minimal dependencies needed for compatibility
hex = "0.4"                # Hex encoding/decoding
zeroize = "1.8"            # Secure memory clearing
rand = "0.8"               # Random number generation

# Optional WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "ghostbridge-example"
path = "src/bin/example.rs"
